linkerd-mpol/add-linkerd-policy-annotation/.chainsaw-test/chainsaw-step-02-apply-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    foo: bar
  name: lpa-ns01
