linkerd-mpol/add-linkerd-policy-annotation/.chainsaw-test/chainsaw-step-02-apply-2.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    config.linkerd.io/default-inbound-policy: allow
  name: lpa-ns02
