linkerd-mpol/add-linkerd-policy-annotation/.chainsaw-test/exception-sibling.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-policy-exception-sibling
  annotations: {}
