linkerd-mpol/add-linkerd-policy-annotation/.chainsaw-test/policy-exception.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: add-linkerd-policy-annotation-exception
  namespace: policy-exceptions
spec:
  policyRefs:
  - name: add-linkerd-policy-annotation
    kind: MutatingPolicy
  matchConditions:
  - name: exact-resource
    expression: object.metadata.name == 'linkerd-policy-exception-ns'
