linkerd-mpol/add-linkerd-policy-annotation/add-linkerd-policy-annotation.yaml
apiVersion: policies.kyverno.io/v1
kind: MutatingPolicy
metadata:
  name: add-linkerd-policy-annotation
  annotations:
    policies.kyverno.io/title: Add Linkerd Policy Annotation
    policies.kyverno.io/minversion: 1.17.0
    policies.kyverno.io/category: Linkerd
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Namespace,Annotation
    policies.kyverno.io/description: >-
      Linkerd will, by default, allow all incoming traffic to Pods in the mesh
      including that from outside the cluster network. In many cases, this default
      needs to be changed to deny all traffic so it may be selectively
      opened using Linkerd policy objects. This policy sets the annotation
      `config.linkerd.io/default-inbound-policy` to `deny`, if not present, for new Namespaces.
      It can be customized with exclusions to more tightly control its application.
spec:
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["namespaces"]
  matchConditions:
    - name: annotation-not-present
      expression: |
        !has(object.metadata.annotations) || 
        !object.metadata.annotations.exists(k, k == 'config.linkerd.io/default-inbound-policy')
  mutations:
    - patchType: ApplyConfiguration
      applyConfiguration:
        expression: |
          Object{
            metadata: Object.metadata{
              annotations: {
                "config.linkerd.io/default-inbound-policy": "deny"
              }
            }
          }
