linkerd-mpol/add-linkerd-policy-annotation/.chainsaw-test/chainsaw-step-02-assert-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    config.linkerd.io/default-inbound-policy: deny
    foo: bar
  name: lpa-ns01
