linkerd-mpol/add-linkerd-policy-annotation/.chainsaw-test/exception-assert.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-policy-exception-ns
  annotations: {}
