linkerd-mpol/add-linkerd-policy-annotation/.chainsaw-test/exception-expected.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-policy-exception-ns
(!contains(keys(metadata.annotations || `{}`), 'config.linkerd.io/default-inbound-policy')): true
