linkerd-mpol/add-linkerd-policy-annotation/.chainsaw-test/exception-sibling-expected.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-policy-exception-sibling
  annotations:
    config.linkerd.io/default-inbound-policy: deny
